$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.2-b2 (?? Feb 2007)
 - Fixed bug [ 1909554 ] Public access override event name broken
 - Added new RSS feed for Activity Log
 - Removed old hack for register_globals work-around that is no longer
   needed.  This will improve security.
 - Moved hard-coded upcoming.php config setting to System Settings.
 - Fix bug [ 1907099 ] view_entry.php shows wrong date
 - Bug fixes: call getPostValue in verious form handling files
 - Added new 'Security Audit' page.
 - Fixed bug: external users with no email address get squished into a single
   user on second edit
 - Fixed bug: use strpos instead of stripos for PHP4 compatibility

Version 1.2-b1 (25 Feb 2007)
 - Apply [ 1900716 ] themes not sticking if auth_http true
 - Apply PATCH [ 1900714 ] User Custom Headers Patch
 - Add option to include iCalendar attachment to emails for both
   reminders and notifications
 - Apply PATCH [ 1878056 ] Call toggle_datefields() JavaScript function with onClick
 - Apply PATCH [ 1894150 ] corrections to 'translations/Italian.txt'
 - Fix bug [ 1844751 ] Events on Sundays not displayed in DayByTime view
   (thanks neufeind)
 - Fix bug [ 1882034 ] weekly repeat not showing in first week of some months
   (thanks neufeind)
 - Apply patch [ 1895173 ] Fix for reminder-format
 - Fix bug [ 1893997 ] iCal export from Outlook over https (thanks neufeind)
 - Fix bug: not auth for certain events where public is participant
 - Fix bug: 'Remote Calendar' menu link not brining up correct tab on page
 - Fix bug: single quote in nonuser name causes JS error
 - Fix bug [ 1851371 ] Notification not sent on description change
 - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
 - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues